--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "cutlass"
 version = "0.1.0"
 authors = ["Akshay <nerdypepper@tuta.io>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Macro based library to take the boilerplate out of configuration handling"
+readme = "readme.md"
+repository = "https://github.com/nerdypepper/cutlass"
+license = "MIT"
+keywords = ["curry", "currying", "macro", "functional", "haskell"]
 
 [dependencies]
 proc-macro2 = "1.0.9"
